# fastapi_base

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  generic.py  main.py  pyproject.toml  requirements.txt
example/app_support/: main.py  pyproject.toml
example/app_support/core/: config.py
example/app_support/core/database/: db_helper.py
example/app_support/share/: errors.py  schemas.py
example/app_support/src/models/: __init__.py  support.py  user.py
examples/app_support_2/: .dockerignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
examples/app_support_2/core/: config.py
examples/app_support_2/core/database/: db_config.py  db_helper.py
examples/app_support_2/core/share/: models.py
examples/app_support_2/core/share/interfaces/: repository.py
examples/app_support_2/migrations/: __init__.py  base.py  env.py
examples/app_support_2/migrations/versions/: 2023_09_20_2028-fd67187d4fb5_create_tables.py
examples/app_support_2/src/: routes.py
examples/app_support_2/src/config/: project_config.py
examples/app_support_2/src/dependencies/: permission.py
examples/app_support_2/src/interfaces/: permission_interface.py
examples/app_support_2/src/models/: base_model.py  category_model.py  support_model.py
examples/app_support_2/src/schemas/: user_schema.py
examples/app_support_2/src/services/: base_service.py  query_base_service.py
examples/app_support_2/src/support/: models.py  repositories.py  services.py
examples/app_support_2/src/support/controllers/: admin_controller.py  support_controller.py
examples/app_support_2/src/support/routers/: admin.py  (+1 more)
examples/app_support_2/src/users/: __int__.py  models.py  repositories.py
(+114 files in other folders)
