[tool.poetry]
name = "fastapi-base"
version = "0.1.0"
description = ""
authors = ["Omelchenko Michael <socanime@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
