[tool.poetry]
name = "support"
version = "0.1.0"
description = ""
authors = ["Omelchenko Michael <socanime@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
alembic = "^1.12.0"
pydantic-settings = "^2.0.3"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
